# bnf-plus-plus

./: AUTHORS  INSTALL  Makefile.am  Makefile.in  README  bnf++.bnf++  configure  configure.ac
doc/: Makefile.am  Makefile.in  bnf++.1  bnf++.info  bnf++.texi  bnf++.xml  help2man  inman  stamp-vti
src/: Makefile.am  Makefile.in  bnf++gen.cc  bnf++gen.h  bnf++help.h  bnf++main.cc  bnf++parser.cc  bnf++parser.h  bnf++version.h
templates/: base.tpl  base_uv.tpl  template.tpl  template_uv.tpl
